# room_reservation

./: .env  fastapi.db  pyproject.toml
alembic/: env.py
alembic/versions/: 049092971410_first_migration.py  2023_02_10_1550-fa9b82916c0a_add_reservation_model.py  3dc821a8f023_add_description_to_meetingroom.py
app/: main.py
app/api/: meeting_room.py  routers.py  validators.py
app/api/endpoints/: meeting_room.py  reservation.py
app/core/: base.py  config.py  db.py
app/crud/: base.py  meeting_room.py  reservation.py
app/models/: meeting_room.py  reservation.py
app/schemas/: meeting_room.py  reservation.py
