[tool.poetry]
name = "room-reservation"
version = "0.1.0"
description = ""
authors = ["makzy <akmuzyka@yandex.ru>"]
readme = "README.md"
packages = [{include = "room_reservation"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
